--- a/Personal Biography/style.css
+++ b/Personal Biography/style.css
@@ -178,7 +178,7 @@ ul li a:hover {
   border-radius: 100%;
 }
 
-@media (width < 750px) {
+@media (max-width: 750px) {
   nav .checkbox {
     display: block;
   }
@@ -206,7 +206,7 @@ ul li a:hover {
   .section__container {
     padding: 10rem 1rem 5rem 1rem;
     text-align: center;
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: 1fr;
   }
 
   .image {
@@ -215,5 +215,23 @@ ul li a:hover {
 
   .action__btns {
     margin: auto;
+    flex-direction: column; 
+    gap: 1rem;
+  }
+
+  .action__btns button {
+    width: 100%; 
+  }
+
+  .title {
+    font-size: 2rem;
+  }
+
+  .subtitle {
+    font-size: 1.2rem; 
+  }
+
+  .description {
+    font-size: 1rem; 
   }
 }
